fix spacing on market card

--- a/packages/augur-ui/src/modules/market-cards/market-card.styles.less
+++ b/packages/augur-ui/src/modules/market-cards/market-card.styles.less
@@ -21,10 +21,12 @@
 	> span,
 	> button:last-of-type {
 		border-left: 1px solid @color-dark-grey;
-		padding-left: @size-16;
+    padding-left: @size-16;
 	}
 
 	> div:nth-of-type(3) {
+    grid-row: 2 / span 4;
+
 		> div {
 			flex-direction: column;
 			text-transform: uppercase;
